Fixed CSS overflow issue when selecting browser roots.
git-svn-id: https://subversion.assembla.com/svn/mdss@4745 e0e46c49-be69-4f5a-ad62-21024a331aea

Former-commit-id: 771bc8229eedfb7db8a4752ea018d49581abdd60 [formerly fa2c36ce9e264c4c7a3128c8305908280376f9a1]
Former-commit-id: 15acefe2084ec63fb83eead0e55f02411e073c13

--- a/trunk/webapp/css/style.css
+++ b/trunk/webapp/css/style.css
@@ -889,6 +889,12 @@ input.browserSaveButton, input.browserCancelButton {
   margin-right: 10px;
 }
 
+div#ontologyFields {
+  height: 100%;
+  overflow: auto;
+  margin-top: 9px;
+}
+
 table.ontologyFields {
   margin-top: 5px;
   margin-bottom: 15px;
